<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/recycler_view_item_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/seu_pokemon"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:id="@+id/linear_seu_pokemon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_pokemon"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@drawable/bulbasaur" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/margin_mini"
                    android:paddingLeft="@dimen/margin_mini"
                    android:paddingRight="@dimen/margin_mini"
                    android:paddingStart="@dimen/margin_mini">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nome" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/altura" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/peso" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/margin_mini"
                    android:paddingLeft="@dimen/margin_mini"
                    android:paddingRight="@dimen/margin_mini"
                    android:paddingStart="@dimen/margin_mini">

                    <TextView
                        android:id="@+id/nome_pokemon_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Titulo" />

                    <TextView
                        android:id="@+id/altura_pokemon_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="120" />

                    <TextView
                        android:id="@+id/peso_pokemon_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="55" />

                    <TextView
                        android:id="@+id/level_pokemon_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="29" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <Button
            android:id="@+id/iniciar_batalha"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:text="@string/iniciar_batalha" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/oponente_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <LinearLayout
            android:id="@+id/linear_oponente_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_oponente_1"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@drawable/bulbasaur" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/margin_mini"
                    android:paddingLeft="@dimen/margin_mini"
                    android:paddingRight="@dimen/margin_mini"
                    android:paddingStart="@dimen/margin_mini">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nome" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/altura" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/peso" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level" />

                    <TextView
                        android:id="@+id/txt_resultado_um"
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resultado" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/margin_mini"
                    android:paddingLeft="@dimen/margin_mini"
                    android:paddingRight="@dimen/margin_mini"
                    android:paddingStart="@dimen/margin_mini">

                    <TextView
                        android:id="@+id/nome_oponente_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Titulo" />

                    <TextView
                        android:id="@+id/altura_oponente_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="120" />

                    <TextView
                        android:id="@+id/peso_oponente_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="55" />

                    <TextView
                        android:id="@+id/level_oponente_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="29" />

                    <TextView
                        android:id="@+id/resultado_oponente_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        tools:text="Vitória"
                        tools:textColor="@color/color_vitoria"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/oponente_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <LinearLayout
            android:id="@+id/linear_oponente_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_oponente_2"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@drawable/bulbasaur" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/margin_mini"
                    android:paddingLeft="@dimen/margin_mini"
                    android:paddingRight="@dimen/margin_mini"
                    android:paddingStart="@dimen/margin_mini">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nome" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/altura" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/peso" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level" />

                    <TextView
                        android:id="@+id/txt_resultado_dois"
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resultado" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/margin_mini"
                    android:paddingLeft="@dimen/margin_mini"
                    android:paddingRight="@dimen/margin_mini"
                    android:paddingStart="@dimen/margin_mini">

                    <TextView
                        android:id="@+id/nome_oponente_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Titulo" />

                    <TextView
                        android:id="@+id/altura_oponente_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="120" />

                    <TextView
                        android:id="@+id/peso_oponente_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="55" />

                    <TextView
                        android:id="@+id/level_oponente_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="29" />

                    <TextView
                        android:id="@+id/resultado_oponente_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        tools:text="Vitória"
                        tools:textColor="@color/color_vitoria"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/oponente_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <LinearLayout
            android:id="@+id/linear_oponente_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_oponente_3"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                tools:src="@drawable/bulbasaur" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/margin_mini"
                    android:paddingLeft="@dimen/margin_mini"
                    android:paddingRight="@dimen/margin_mini"
                    android:paddingStart="@dimen/margin_mini">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nome" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/altura" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/peso" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/level" />

                    <TextView
                        android:id="@+id/txt_resultado_tres"
                        android:visibility="gone"
                        tools:visibility="visible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resultado" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingEnd="@dimen/margin_mini"
                    android:paddingLeft="@dimen/margin_mini"
                    android:paddingRight="@dimen/margin_mini"
                    android:paddingStart="@dimen/margin_mini">

                    <TextView
                        android:id="@+id/nome_oponente_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Titulo" />

                    <TextView
                        android:id="@+id/altura_oponente_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="120" />

                    <TextView
                        android:id="@+id/peso_oponente_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="55" />

                    <TextView
                        android:id="@+id/level_oponente_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="29" />

                    <TextView
                        android:id="@+id/resultado_oponente_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Vitória"
                        android:textStyle="bold"
                        tools:textColor="@color/color_vitoria"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />
    </LinearLayout>
</ScrollView>